--- a/index.html
+++ b/index.html
@@ -75,28 +75,47 @@
 
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/countup.js/1.7.1/countUp.min.js"></script>
 <script>
   let currentCounter = null;
-  let lastValue = undefined;
-  let lastCounter = null;
+  let currentValue = undefined;
+  let currentElement = null;
   $(".counter").waypoint(function (direction) {
-    if(lastCounter) lastCounter.textContent = lastValue;
-    if (currentCounter) clearInterval(currentCounter)
     if (direction === 'down') {
-      lastCounter = this.element
-      lastValue = lastCounter.textContent
-      currentCounter = setInterval((function () {
-        ++this.textContent;
-      }).bind(this.element), 1000);
-    }
-    if (direction === 'up') {
-      lastCounter = this.element.parentElement.previousElementSibling;
-      lastValue = lastCounter.textContent
-      currentCounter = setInterval((function () {
-        if (this.parentElement.previousElementSibling) ++this.parentElement.previousElementSibling.textContent;
-      }).bind(this.element), 1000);
+      if (currentCounter) {
+        currentCounter.reset();
+        currentElement.textContent = currentValue;
+      };
+      currentValue = this.element.textContent;
+      currentElement = this.element;
+      currentCounter = new CountUp(this.element, 0, this.element.textContent, 0, 5, {
+        useEasing: true,
+        useGrouping: true,
+        separator: ',',
+        decimal: '.',
+        prefix: '$',
+      });
+      currentCounter.start();
     }
   }, { offset: '100%' });
+  $(".counter").waypoint(function (direction) {
+    if (direction === 'up') {
+      if (currentCounter) {
+        currentCounter.reset();
+        currentElement.textContent = currentValue;
+      };
+      currentValue = this.element.textContent;
+      currentElement = this.element;
+      currentCounter = new CountUp(this.element, 0, this.element.textContent, 0, 5, {
+        useEasing: true,
+        useGrouping: true,
+        separator: ',',
+        decimal: '.',
+        prefix: '$',
+      });
+      currentCounter.start();
+    }
+  }, { offset: '0' });
 </script>
 
 </html>
