Removed: Prefix of value

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         useGrouping: true,
         separator: ',',
         decimal: '.',
-        prefix: '$',
+        // prefix: '$',
       });
       currentCounter.start();
     }
@@ -111,7 +111,7 @@
         useGrouping: true,
         separator: ',',
         decimal: '.',
-        prefix: '$',
+        // prefix: '$',
       });
       currentCounter.start();
     }
